    README.source. Closes: #632776
  * Add patch from Cédric Boutillier, from a debian-ruby@ discussion from
    2012, that makes gem2tgz pick the most recent (in terms of gem version)
    gem file, instead of just the first one, after running gem fetch.
    Closes: #733171
  * bin/dh-make-ruby: use '.' (current directory) as default target.
    Closes: #777747

 -- Lucas Nussbaum <lucas@debian.org>  Mon, 11 May 2015 21:10:48 +0200

gem2deb (0.15) unstable; urgency=medium

  * dh-make-ruby, debian/ruby-tests.rake for test/unit: add 'test' to the
    $LOAD_PATH by default, and also run tests on test/**/test_*.rb.
    (Closes: #784323)

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 06 May 2015 09:05:36 -0300

gem2deb (0.14) experimental; urgency=medium

  [ Antonio Terceiro ]
  * dh-make-ruby: fix conversion of gem names with uppercase characters into
    debian package names
  * dh_ruby: don't pass LIBDIR into command line when running different
    interpreters while installed system-wide. This avoids extra
    -I/usr/lib/ruby/vendor_ruby in command lines and eases debugging running
    processes for packages that e.g. hang while running their tests.
  * debian/requires-rubygems.overrides it not supported anymore. Patching out
    instances of `require 'rubygems'` is now considered an antipattern.

  [ Sebastien Badia ]
  * Update Vcs-Browser to cgit URL and HTTPS.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 11 Apr 2015 17:41:31 +0200

gem2deb (0.13) experimental; urgency=medium

  [ Antonio Terceiro ]
  * dh-make-ruby: bump Standards-Version in template to 3.9.6
  * dh-make-ruby: add gem runtime dependencies to Build-Depends: as well
  * TestRunner: when running build time tests, use the full path for extra
    library directories installed in debian/$pkg
  * SetupRbInstaller: copy system copy of setup.rb instead of symlinking. This
    will fail if it's not there.
  * gem2deb: add missing dependency on ruby-setup, since setup.rb is used